--- a/RestaurantManager.UniversalWindows/RestaurantManager.UniversalWindows/ExpeditePage.xaml
+++ b/RestaurantManager.UniversalWindows/RestaurantManager.UniversalWindows/ExpeditePage.xaml
@@ -7,11 +7,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    <Page.TopAppBar>
+        <AppBar>
+            <AppBarToggleButton x:Name="navigateToHomePage" Icon="Home" Click="MainPage_Clicked" />
+        </AppBar>
+    </Page.TopAppBar>
+
     <Grid Background="Black">
         <Grid.RowDefinitions>
-        <RowDefinition Height="0.9*" />
-        <RowDefinition Height="0.1*" />
+            <RowDefinition Height="0.9*"/>
+            <RowDefinition Height="0.1*" />
         </Grid.RowDefinitions>
-        <TextBlock Text="**Clear All Orders**" Foreground="White" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <GridView Grid.Row="0" Margin="10,10,10,10" Background="Black"/>
+        <Button Content="**Clear All Orders**" Foreground="White" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="365,11,364,11" Height="55" Width="295"/>
     </Grid>
 </Page>
