--- a/RestaurantManager.UniversalWindows/RestaurantManager.UniversalWindows/OrderPage.xaml
+++ b/RestaurantManager.UniversalWindows/RestaurantManager.UniversalWindows/OrderPage.xaml
@@ -5,8 +5,11 @@
     xmlns:local="using:RestaurantManager.UniversalWindows"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:RestaurantManager.Models"
     mc:Ignorable="d">
-
+    <Page.DataContext>
+        <models:DataManager />
+    </Page.DataContext>
     <Page.TopAppBar>
         <AppBar>
             <AppBarToggleButton x:Name="navigateToHomePage" Icon="Home" Click="MainPage_Clicked" />
@@ -27,12 +30,19 @@
             <RowDefinition Height="0.1*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Special Requests:" FontSize="20" Foreground="white" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <TextBlock Text="Order Items:" FontSize="20" Foreground="White" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" />
-        <ListView Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" Background="Black" />
-        <ListView Grid.Row="2" Grid.Column="3" />
-        <Button Content="**Add to Order**" Foreground="White" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <Button Content="**Submit Order**" Foreground="White" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        
+        <TextBlock Text="Special Requests:"  Foreground="white" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <TextBlock Text="Order Items:"  Foreground="White" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <ListView x:Name="MenuItems" ItemsSource="{Binding MenuItems}"
+            
+            Grid.Row="1" 
+            Grid.Column="0" 
+            Grid.RowSpan="2" />
+        <ListView 
+            x:Name="OrderedItems" 
+            ItemsSource="{Binding CurrentlySelectedMenuItems}" 
+            Grid.Row="2" 
+            Grid.Column="2" />
+        <Button x:Name="addOrders" Content="**Add to Order**" Foreground="White" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" Click="addOrders_Click" />
+        <Button Content="**Submit Order**" Foreground="White" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" />        
     </Grid>
 </Page>
